--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,19 +2,34 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="udacity.hugo.myappportfolio" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
     <application
+        android:name=".PortfolioApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".spotifystreamer.SpotifyStreamerActivity"
+            android:label="@string/title_activity_spotify_streamer"
+            android:screenOrientation="portrait">
+        </activity>
+        <activity
+            android:name=".spotifystreamer.ArtistTracksActivity"
+            android:label="@string/title_activity_artist_tracks"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
