--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="udacity.hugo.myappportfolio" >
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".PortfolioApplication"
@@ -14,7 +14,7 @@
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,12 +24,16 @@
         <activity
             android:name=".spotifystreamer.SpotifyStreamerActivity"
             android:label="@string/title_activity_spotify_streamer"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
         </activity>
         <activity
             android:name=".spotifystreamer.ArtistTracksActivity"
             android:label="@string/title_activity_artist_tracks"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".spotifystreamer.TrackPlayerActivity"
+            android:label="@string/title_activity_track_player" >
         </activity>
     </application>
 
