Playing song preview done

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,12 @@
     package="udacity.hugo.myappportfolio" >
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
+
+
         android:name=".PortfolioApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -35,6 +38,7 @@
             android:name=".spotifystreamer.TrackPlayerActivity"
             android:label="@string/title_activity_track_player" >
         </activity>
+        <service android:name=".spotifystreamer.StreamerService"/>
     </application>
 
 </manifest>
